--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 		target="_blank" class="isi">Biostats: Compilation of Notes</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/risalah" 
 		target="_blank" class="isi">Buku: Risalah Penebas - Bid'ah-bid'ah di Kepala Batas</a></li>
+		<li class="list"><a href="https://bazliamin90.github.io/kisahpalsu" 
+		target="_blank" class="isi">Buku: 40 Kisah Palsu tetapi Masyhur</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/bukujin" 
 		target="_blank" class="isi">Buku: Membongkar Rahsia Jin, Syaitan & Iblis dalam Al-Quran</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/almunir" 
