--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
 		target="_blank" class="isi">Game: Choki-choki Card Guess</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/dice" 
 		target="_blank" class="isi">Game: Multiplayer Dice Game</a></li>
+		<li class="list"><a href="https://bazliamin90.github.io/iadah" 
+		target="_blank" class="isi">Rekod I'adah</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/nota" 
 		target="_blank" class="isi">Nota Tadabbur</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/baca" 
