--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 		target="_blank" class="isi">Game: Multiplayer Dice Game</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/ipod" 
 		target="_blank" class="isi">Ipod</a></li>
-		<li class="list"><a href="https://bazliamin90.github.io/iadah" 
-		target="_blank" class="isi">Rekod I'adah</a></li>
+		<li class="list"><a href="https://bazliamin90.github.io/ulang" 
+		target="_blank" class="isi">Rekod Mengulang</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/nota" 
 		target="_blank" class="isi">Nota Tadabbur</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/baca" 
