--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 		target="_blank" class="isi">Buku: Membongkar Rahsia Jin, Syaitan & Iblis dalam Al-Quran</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/almunir" 
 		target="_blank" class="isi">Buku: Tafsir Al-Munir</a></li>
+		<li class="list"><a href="https://bazliamin90.github.io/ibnukatsir" 
+		target="_blank" class="isi">Buku: Tafsir Ibn Katsir</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/bukutajwid" 
 		target="_blank" class="isi">Buku: Tajwidul Quran</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/catit" 
