--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
 		target="_blank" class="isi">Nota Tadabbur</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/baca" 
 		target="_blank" class="isi">Nota Tajwid dan Perbincangan Lain</a></li>
+		<li class="list"><a href="https://bazliamin90.github.io/template" 
+		target="_blank" class="isi">Template</a></li>
 	</ol>
 	
 </main>
