--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 		target="_blank" class="isi">Buku: Tajwidul Quran</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/catit" 
 		target="_blank" class="isi">Catit Nota</a></li>
+		<li class="list"><a href="https://bazliamin90.github.io/duit" 
+		target="_blank" class="isi">Duit Tracker</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/adetakde" 
 		target="_blank" class="isi">Game: Gambar Mana yang Tinggal</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/game" 
