--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 		target="_blank" class="isi">Ipod</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/ulang" 
 		target="_blank" class="isi">Rekod Mengulang</a></li>
+		<li class="list"><a href="https://bazliamin90.github.io/ngulang" 
+		target="_blank" class="isi">Ngulang Tracker</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/nota" 
 		target="_blank" class="isi">Nota Tadabbur</a></li>
 		<li class="list"><a href="https://bazliamin90.github.io/baca" 
